--- a/public/css/backend_css/jquery.gritter.css
+++ b/public/css/backend_css/jquery.gritter.css
@@ -33,7 +33,7 @@
 
 .gritter-item {
 	display:block;
-	background: #f74d4d; /* Old browsers */
+	background: blue; /* Old browsers */
 	color:#2b2b2b; box-shadow:3px 3px 20px #000;
 	padding:7px 10px 10px;
 	font-size: 11px; color:#fff;
@@ -59,10 +59,11 @@
 	height:30px;
 }
 .gritter-title {
-	font-size:12px;
+	font-size:17px;
 	font-weight:bold;
-	padding:0 0 7px 0;
+	padding:0;
 	display:block;
+	color: white ;
 }
 .gritter-image {
 	width:32px;
